# jakdojade-clone-parallel

./: CMakeLists.txt
src/: algorithm.cpp  algorithm.h  database_queries.cpp  database_queries.h  main.cpp  openmp.cpp  openmp.h  sequence.cpp  sequence.h
